# rxwebcam

./: CMakeCache.txt  CMakeLists.txt  HACER  Makefile  README  TODO  cmake_install.cmake  install_manifest.txt
3rd_libs/revel-1.1.0-cmake-shared/: CMakeLists.txt  INSTALL
3rd_libs/revel-1.1.0-cmake-shared/src/: BaseEncoder.cpp
plugins/: plugin.h
plugins/effects/: CMakeLists.txt  Makefile  cmake_install.cmake  effect.cpp  effect.h  effect_qtproject_backware  moc_ConfigPluginImp.cxx  moc_plugin_effects.cxx  plugin_effects.cpp  plugin_effects.h  ui_configplugin.h
plugins/effects/share_data/: plugin_effects.ts  plugin_effects_pt_BR.ts
plugins/effects/share_data/locales/en_US/: plugin_effects_en.qm
plugins/effects/share_data/locales/pt_BR/: plugin_effects_pt_BR.qm
plugins/effects/ui_interfaces/: ConfigPluginImp.cpp  ConfigPluginImp.h  Makefile  configplugin.ui
plugins/marcos/: CMakeLists.txt  Makefile  README  cmake_install.cmake  marcos_qtproject_backward  moc_plugin_marcos.cxx  plugin_marcos.cpp  plugin_marcos.h  ui_configplugin.h
plugins/marcos/share_data/: plugin_marcos.ts  plugin_marcos_pt_BR.ts
plugins/marcos/share_data/locales/en_US/: plugin_marcos_en.qm
plugins/marcos/share_data/locales/pt_BR/: plugin_marcos_pt_BR.qm
plugins/marcos/ui_interfaces/: ConfigPluginImp.cpp  ConfigPluginImp.h  configplugin.ui
plugins/photo_server/: CMakeLists.txt  Makefile  README  cmake_install.cmake  moc_ConfigPluginImp.cxx  moc_plugin_photo_server.cxx  photo_server_qtproject_backward  plugin_photo_server.cpp  plugin_photo_server.h  simple_server.cpp  simple_server.h  thread_server.cpp  thread_server.h  ui_configplugin.h
plugins/photo_server/share_data/: photo_server.ts  photo_server_pt_BR.ts
plugins/photo_server/share_data/locales/en_US/: photo_server_en.qm
plugins/photo_server/share_data/locales/pt_BR/: photo_server_pt_BR.qm
plugins/photo_server/ui_interfaces/: ConfigPluginImp.cpp  ConfigPluginImp.h  ValidateIp.cpp  ValidateIp.h  configplugin.ui
rxwebcam/: CMakeLists.txt  Changelog  ConfigPluginsImp.cpp  ConfigPluginsImp.h  FormStreamingImp.cpp  FormStreamingImp.h  Makefile  OpenDeviceImp.h  README  RxPluginManager.h  TODO  WebcamControlImp.cpp  WebcamControlImp.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  moc_ConfigPluginsImp.cxx  moc_FormStreamingImp.cxx  moc_WebcamControlImp.cxx  moc_mainwindow.cxx  moc_v4l2uvc.cxx  moc_v4l2wrap.cxx  moc_webcamdevice.cxx  movie_encoder.cpp  movie_encoder.h  plugin.h  qrc_rxwebcam.cxx  rxwebcam  rxwebcam.qrc  rxwebcam_qtproject_backward  ui_configplugins.h  ui_opendevice.h  ui_streaming.h  ui_webcamcontrol.h  webcamdevice.cpp  webcamdevice.h
rxwebcam/locales/: rxwebcam.ts  rxwebcam_pt_BR.ts
rxwebcam/locales/en_US/: rxwebcam_en.qm
rxwebcam/locales/pt_BR/: rxwebcam_pt_BR.qm
rxwebcam/ui_interface/: configplugins.ui  opendevice.ui  streaming.ui  webcamcontrol.ui
rxwebcam/v4l2wrap/: Error.cpp  Error.h  Makefile  formatv4l2convert.cpp  formatv4l2convert.h  grabinputmanager.cpp  grabinputmanager.h  grabinputmodes.cpp  grabinputmodes.h  v4l2uvc.cpp  v4l2uvc.h  v4l2wrap.cpp  v4l2wrap.h
